src/test/ui/issues/issue-39559.stderr
error[E0599]: no function or associated item named `dim` found for type `D` in the current scope
  --> $DIR/issue-39559.rs:14:21
   |
LL |     entries: [T; D::dim()],
   |                     ^^^ function or associated item not found in `D`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `dim`, perhaps you need to implement it:
           candidate #1: `Dim`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
